--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,8 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest -f FlaskApp/dockerfile .
+      
 
       - name: Push Docker Image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest
