--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,19 +23,21 @@ jobs:
         run: pytest test_app.py
 
   build-and-push-docker:
-    needs: build  # Corrigé ici
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Vérifier les fichiers disponibles
+        run: ls -R  # Étape de débogage pour voir les fichiers
+
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest -f FlaskApp/Dockerfile .
-      
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest .
 
       - name: Push Docker Image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/flaskapp:latest
